--- a/src/Amazon.ipynb
+++ b/src/Amazon.ipynb
@@ -2,14 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[]\n"
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'numpy'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-e3270d7a8d46>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mjson\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mast\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0;32mdef\u001b[0m \u001b[0mparse\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlimit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;31m# limit+1 many reviews will get printed\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'numpy'"
      ]
     }
    ],
@@ -153,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +263,7 @@
        "[339231 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -283,7 +287,7 @@
     "        df[i] = d\n",
     "        i += 1\n",
     "    return pd.DataFrame.from_dict(df, orient='index')\n",
-    "df = getDF('reviews_Musical_Instruments.json.gz')\n",
+    "df = getDF('../Data/reviews_Musical_Instruments.json.gz')\n",
     "#df  is the whole table of data, we need to act on this\n",
     "# very imp code : https://stackoverflow.com/questions/49405101/grouping-all-rows-of-a-pandas-dataframewith-many-columns-with-the-same-value-i\n",
     "df = df[['reviewerID','asin']]\n",
@@ -293,17 +297,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>reviewerID</th>\n",
+       "      <th>asin</th>\n",
+       "      <th>value</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>A1YS9MDZP93857</td>\n",
+       "      <td>0006428320</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>A3TS466QBAWB9D</td>\n",
+       "      <td>0014072149</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>A3BUDYITWUSIS7</td>\n",
+       "      <td>0041291905</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>A19K10Z0D2NTZK</td>\n",
+       "      <td>0041913574</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>A14X336IB4JD89</td>\n",
+       "      <td>0201891859</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>500171</th>\n",
+       "      <td>A2XEVARMJP81E</td>\n",
+       "      <td>B00LIR7QNS</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>500172</th>\n",
+       "      <td>A3PAQGM6P87MXO</td>\n",
+       "      <td>B00LJD5AUM</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>500173</th>\n",
+       "      <td>A2KZX7A4XZ4T2W</td>\n",
+       "      <td>B00LK7A9SK</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>500174</th>\n",
+       "      <td>AIDHT6KXOL64T</td>\n",
+       "      <td>SMLRBIMX03</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>500175</th>\n",
+       "      <td>A161I1MHX2G2BR</td>\n",
+       "      <td>SMLRBIMX03</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>500176 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            reviewerID        asin  value\n",
+       "0       A1YS9MDZP93857  0006428320      1\n",
+       "1       A3TS466QBAWB9D  0014072149      1\n",
+       "2       A3BUDYITWUSIS7  0041291905      1\n",
+       "3       A19K10Z0D2NTZK  0041913574      1\n",
+       "4       A14X336IB4JD89  0201891859      1\n",
+       "...                ...         ...    ...\n",
+       "500171   A2XEVARMJP81E  B00LIR7QNS      1\n",
+       "500172  A3PAQGM6P87MXO  B00LJD5AUM      1\n",
+       "500173  A2KZX7A4XZ4T2W  B00LK7A9SK      1\n",
+       "500174   AIDHT6KXOL64T  SMLRBIMX03      1\n",
+       "500175  A161I1MHX2G2BR  SMLRBIMX03      1\n",
+       "\n",
+       "[500176 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_copy = df.copy()\n",
+    "df_copy[\"value\"] = 1\n",
+    "df_copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from scipy.sparse import csr_matrix\n",
+    "from pandas.api.types import CategoricalDtype\n",
+    "\n",
+    "\n",
+    "reviewer = CategoricalDtype(sorted(df_copy[\"reviewerID\"].unique()), ordered=True)\n",
+    "product = CategoricalDtype(sorted(df_copy[\"asin\"].unique()), ordered=True)\n",
+    "\n",
+    "row = df_copy[\"reviewerID\"].astype(reviewer).cat.codes\n",
+    "col = df_copy[\"asin\"].astype(product).cat.codes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sparse_matrix = csr_matrix((df_copy[\"value\"], (row, col)),\n",
+    "                           shape=(reviewer.categories.size, product.categories.size))"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "gcn",
    "language": "python",
-   "name": "python3"
+   "name": "gcn"
   },
   "language_info": {
    "codemirror_mode": {
