--- a/src/Rev2TimeRanges.ipynb
+++ b/src/Rev2TimeRanges.ipynb
@@ -1040,9 +1040,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "rl",
    "language": "python",
-   "name": "myenv"
+   "name": "rl"
   },
   "language_info": {
    "codemirror_mode": {
