--- a/src/Rev2Data&Yelp.ipynb
+++ b/src/Rev2Data&Yelp.ipynb
@@ -1041,8 +1041,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1066,7 +1068,6 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>user_id</th>\n",
-       "      <th>prod_id</th>\n",
        "      <th>Label</th>\n",
        "    </tr>\n",
        "  </thead>\n",
@@ -1074,92 +1075,81 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>1000</td>\n",
-       "      <td>0</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>10000</td>\n",
-       "      <td>33,35,50,51,378,410,495,563,718,736</td>\n",
        "      <td>1,1,1,1,1,1,1,1,1,1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>100000</td>\n",
-       "      <td>495</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>100001</td>\n",
-       "      <td>495,724,772</td>\n",
        "      <td>1,1,1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>100002</td>\n",
-       "      <td>495</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
-       "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>160220</th>\n",
        "      <td>99995</td>\n",
-       "      <td>495</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>160221</th>\n",
        "      <td>99996</td>\n",
-       "      <td>495,555,749</td>\n",
        "      <td>1,1,1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>160222</th>\n",
        "      <td>99997</td>\n",
-       "      <td>495</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>160223</th>\n",
        "      <td>99998</td>\n",
-       "      <td>495,906</td>\n",
        "      <td>1,1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>160224</th>\n",
        "      <td>99999</td>\n",
-       "      <td>495</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>160225 rows × 3 columns</p>\n",
+       "<p>160225 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "       user_id                              prod_id                Label\n",
-       "0         1000                                    0                    1\n",
-       "1        10000  33,35,50,51,378,410,495,563,718,736  1,1,1,1,1,1,1,1,1,1\n",
-       "2       100000                                  495                    1\n",
-       "3       100001                          495,724,772                1,1,1\n",
-       "4       100002                                  495                    1\n",
-       "...        ...                                  ...                  ...\n",
-       "160220   99995                                  495                    1\n",
-       "160221   99996                          495,555,749                1,1,1\n",
-       "160222   99997                                  495                    1\n",
-       "160223   99998                              495,906                  1,1\n",
-       "160224   99999                                  495                    1\n",
+       "       user_id                Label\n",
+       "0         1000                    1\n",
+       "1        10000  1,1,1,1,1,1,1,1,1,1\n",
+       "2       100000                    1\n",
+       "3       100001                1,1,1\n",
+       "4       100002                    1\n",
+       "...        ...                  ...\n",
+       "160220   99995                    1\n",
+       "160221   99996                1,1,1\n",
+       "160222   99997                    1\n",
+       "160223   99998                  1,1\n",
+       "160224   99999                    1\n",
        "\n",
-       "[160225 rows x 3 columns]"
+       "[160225 rows x 2 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1168,15 +1158,63 @@
     "#https://stackoverflow.com/questions/21546739/load-data-from-txt-with-pandas\n",
     "Yelp_NYC = pd.read_csv('metadata_YelpNYC.txt',delimiter= '\\s+', index_col=False)\n",
     "Yelp_NYC.columns = [\"user_id\", \"prod_id\", \"rating\", \"Label\",\"date\"]\n",
-    "Yelp_NYC1 = Yelp_NYC[[\"user_id\",\"prod_id\",\"Label\"]]\n",
+    "Yelp_NYC1 = Yelp_NYC[[\"user_id\",\"Label\"]]\n",
     "Yelp_NYC1 = Yelp_NYC1.astype(str).groupby(\"user_id\").agg(','.join).reset_index()\n",
     "Yelp_NYC1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Yelp_NYC1.iat[1,1][0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "132154"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "benign = 0\n",
+    "for i in range(160225):\n",
+    "    if Yelp_NYC1.iat[i,1][0] == '1':\n",
+    "        benign += 1\n",
+    "benign"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -1199,35 +1237,35 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>product_id</th>\n",
        "      <th>reviewer_id</th>\n",
+       "      <th>Label</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2m_KBLL9Bk_dwZ5n5b11nw</td>\n",
-       "      <td>PLOYtrCMUFPHQe2IbYAd5g,G3wDvvYAbICXm2VORleVvw,...</td>\n",
+       "      <td>-0avJ-EVYjNCVwh0r_irUQ</td>\n",
+       "      <td>Y</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2nnXespKBBNtDQTtrumNFg</td>\n",
-       "      <td>zyk-YPhtFZK6kkbpzEKrWw,5H_NApSf2H4tW20V47RoMw,...</td>\n",
+       "      <td>-2N-pSWoeBa6L06_5QLrQQ</td>\n",
+       "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>31yYZQjEIyYE0N3p_vmoOA</td>\n",
-       "      <td>lxLvaKzRcN-7gtxyywgRbA,DAeC-Y66n-jNMJJw4oAfNQ,...</td>\n",
+       "      <td>-2aZoH_YaC-1s1BFzo7GcA</td>\n",
+       "      <td>Y</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>33Xc1Bk_gkSY5xb2doQ7Ng</td>\n",
-       "      <td>747lP4p8dUD6RTkcsIaSGg,Ij5t6VdwtasSkrpp9uAbKg,...</td>\n",
+       "      <td>-3s52C4zL_DHRK0ULG6qtg</td>\n",
+       "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>57PyRW-iahNX_Ur8icAfxg</td>\n",
-       "      <td>4ZfcCa4m5RWvO4EFzfYm1A,LXWVzg77sSA3FDMG4t5IXg,...</td>\n",
+       "      <td>-6ouGOTjGYr03u5TP6Z-Iw</td>\n",
+       "      <td>Y</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1235,53 +1273,53 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>67</th>\n",
-       "      <td>uy2bscWexAcIhOQJ_rn3cQ</td>\n",
-       "      <td>a4WfbXMSmESZC2hAYQuXSQ,RMHG_viMG5tXS9E5qzJfSw,...</td>\n",
+       "      <th>5020</th>\n",
+       "      <td>zyEo2NRpiRhJS1pWpvaZoQ</td>\n",
+       "      <td>Y</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>68</th>\n",
-       "      <td>wJJi0pIHTus5d_DWoz9TKQ</td>\n",
-       "      <td>ONOWV8bvNZdbDBmjvuD3tA,fJVmR4ZVrP1TkBrWAN32gQ,...</td>\n",
+       "      <th>5021</th>\n",
+       "      <td>zyNGr5Tlg1rK1frevXCx2g</td>\n",
+       "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>69</th>\n",
-       "      <td>wLjR0DkA4zxu8iqbUQc0Og</td>\n",
-       "      <td>oLBIcBRD30rmqn09xFgQfg,PdpWp_j67Nfr_oQF-4yKUw,...</td>\n",
+       "      <th>5022</th>\n",
+       "      <td>zyk-YPhtFZK6kkbpzEKrWw</td>\n",
+       "      <td>N,N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>70</th>\n",
-       "      <td>yiXTDN-dfNq3NKXZPKgsaw</td>\n",
-       "      <td>crzEdtDPaiWIpPeHNCXx7A,wBr9wRqyqtQXFSqjcjPL4A,...</td>\n",
+       "      <th>5023</th>\n",
+       "      <td>zzK05ZbEva9FGAjEFWlGFg</td>\n",
+       "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>71</th>\n",
-       "      <td>ztuO0tozkkocR_o2OXDuQw</td>\n",
-       "      <td>xSwEg9th_V6nEBgkdUb2CQ,NZba-Q-Fp10iF77CTQt24Q,...</td>\n",
+       "      <th>5024</th>\n",
+       "      <td>zzzW81llRc2vMWX0VrTJzw</td>\n",
+       "      <td>Y</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>72 rows × 2 columns</p>\n",
+       "<p>5025 rows × 2 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                product_id                                        reviewer_id\n",
-       "0   2m_KBLL9Bk_dwZ5n5b11nw  PLOYtrCMUFPHQe2IbYAd5g,G3wDvvYAbICXm2VORleVvw,...\n",
-       "1   2nnXespKBBNtDQTtrumNFg  zyk-YPhtFZK6kkbpzEKrWw,5H_NApSf2H4tW20V47RoMw,...\n",
-       "2   31yYZQjEIyYE0N3p_vmoOA  lxLvaKzRcN-7gtxyywgRbA,DAeC-Y66n-jNMJJw4oAfNQ,...\n",
-       "3   33Xc1Bk_gkSY5xb2doQ7Ng  747lP4p8dUD6RTkcsIaSGg,Ij5t6VdwtasSkrpp9uAbKg,...\n",
-       "4   57PyRW-iahNX_Ur8icAfxg  4ZfcCa4m5RWvO4EFzfYm1A,LXWVzg77sSA3FDMG4t5IXg,...\n",
-       "..                     ...                                                ...\n",
-       "67  uy2bscWexAcIhOQJ_rn3cQ  a4WfbXMSmESZC2hAYQuXSQ,RMHG_viMG5tXS9E5qzJfSw,...\n",
-       "68  wJJi0pIHTus5d_DWoz9TKQ  ONOWV8bvNZdbDBmjvuD3tA,fJVmR4ZVrP1TkBrWAN32gQ,...\n",
-       "69  wLjR0DkA4zxu8iqbUQc0Og  oLBIcBRD30rmqn09xFgQfg,PdpWp_j67Nfr_oQF-4yKUw,...\n",
-       "70  yiXTDN-dfNq3NKXZPKgsaw  crzEdtDPaiWIpPeHNCXx7A,wBr9wRqyqtQXFSqjcjPL4A,...\n",
-       "71  ztuO0tozkkocR_o2OXDuQw  xSwEg9th_V6nEBgkdUb2CQ,NZba-Q-Fp10iF77CTQt24Q,...\n",
+       "                 reviewer_id Label\n",
+       "0     -0avJ-EVYjNCVwh0r_irUQ     Y\n",
+       "1     -2N-pSWoeBa6L06_5QLrQQ     N\n",
+       "2     -2aZoH_YaC-1s1BFzo7GcA     Y\n",
+       "3     -3s52C4zL_DHRK0ULG6qtg     N\n",
+       "4     -6ouGOTjGYr03u5TP6Z-Iw     Y\n",
+       "...                      ...   ...\n",
+       "5020  zyEo2NRpiRhJS1pWpvaZoQ     Y\n",
+       "5021  zyNGr5Tlg1rK1frevXCx2g     N\n",
+       "5022  zyk-YPhtFZK6kkbpzEKrWw   N,N\n",
+       "5023  zzK05ZbEva9FGAjEFWlGFg     N\n",
+       "5024  zzzW81llRc2vMWX0VrTJzw     Y\n",
        "\n",
-       "[72 rows x 2 columns]"
+       "[5025 rows x 2 columns]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1289,15 +1327,41 @@
    "source": [
     "Yelp_Chi_hotel = pd.read_csv('output_meta_yelpHotelData_NRYRcleaned.txt',delimiter= '\\s+', index_col=False)\n",
     "Yelp_Chi_hotel.columns = [\"date\", \"review_id\", \"reviewer_id\", \"product_id\",\"Label\",\"?\",\"?\",\"?\",\"star_rating\"]\n",
-    "Yelp_Chi_hotel = Yelp_Chi_hotel[[\"reviewer_id\",\"product_id\"]]\n",
-    "Yelp_Chi_hotel1 = Yelp_Chi_hotel.astype(str).groupby(\"product_id\").agg(','.join).reset_index()\n",
+    "Yelp_Chi_hotel = Yelp_Chi_hotel[[\"reviewer_id\",\"Label\"]]\n",
+    "Yelp_Chi_hotel1 = Yelp_Chi_hotel.astype(str).groupby(\"reviewer_id\").agg(','.join).reset_index()\n",
     "Yelp_Chi_hotel1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 13,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "750"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "benign = 0\n",
+    "for i in range(5025):\n",
+    "    if Yelp_Chi_hotel1.iat[i,1][0] == 'Y':\n",
+    "        benign += 1\n",
+    "benign"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1321,34 +1385,34 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>reviewer_id</th>\n",
-       "      <th>product_id</th>\n",
+       "      <th>Label</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>--1-HgcfL1vWbG-1hgn1oA</td>\n",
-       "      <td>43rd1LKcZRIunySzbMsyLQ</td>\n",
+       "      <td>Y</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>--AGQM8GPHljgKdnLisXgQ</td>\n",
-       "      <td>JDNZxz0ud7zhuPo5pqznMA</td>\n",
+       "      <td>Y</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>--KQJPdrU0Md97DiOliDzw</td>\n",
-       "      <td>pbEiXam9YJL3neCYHGwLUA</td>\n",
+       "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>--KXo_HCYq9hB8NOdEUMKw</td>\n",
-       "      <td>1QKqtC4vML3QhkrSzwR_tQ</td>\n",
+       "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>--Qh8yKWAvIP4V4K8ZPfHA</td>\n",
-       "      <td>4wreIFjaPMppyEnzKHbozg</td>\n",
+       "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1358,27 +1422,27 @@
        "    <tr>\n",
        "      <th>33959</th>\n",
        "      <td>zz1xkuwGqxdpH-JJZUYp4g</td>\n",
-       "      <td>ms5ge1XY9-Alu7HkybAMdQ</td>\n",
+       "      <td>N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33960</th>\n",
        "      <td>zz4qBQ-W2AE2g0-ePD0v-Q</td>\n",
-       "      <td>sfWMOqUEp8S2adDeJp7Kzg,vvhfPV-Llkd4fE2SHuLVvA,...</td>\n",
+       "      <td>N,N,N,N,N,N,N,N,N,N,N,N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33961</th>\n",
        "      <td>zz71QiP13ESB37uuzspRMA</td>\n",
-       "      <td>eHtnZ0ISo63_0zr9rFotjw,mCHto10PBQOKnefm7gholg</td>\n",
+       "      <td>N,N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33962</th>\n",
        "      <td>zzGRHRDrx8H7LXFd5QFJ_w</td>\n",
-       "      <td>XgGUnYs2bjbbNvBefFtWxA,oCTlReyKjJxKPFYfCurxxQ</td>\n",
+       "      <td>N,N</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>33963</th>\n",
        "      <td>zzmVpziv5OsjmtshptyA9Q</td>\n",
-       "      <td>ALwH81_sqskLmwfWS-_eeQ</td>\n",
+       "      <td>N</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1386,36 +1450,23 @@
        "</div>"
       ],
       "text/plain": [
-       "                  reviewer_id  \\\n",
-       "0      --1-HgcfL1vWbG-1hgn1oA   \n",
-       "1      --AGQM8GPHljgKdnLisXgQ   \n",
-       "2      --KQJPdrU0Md97DiOliDzw   \n",
-       "3      --KXo_HCYq9hB8NOdEUMKw   \n",
-       "4      --Qh8yKWAvIP4V4K8ZPfHA   \n",
-       "...                       ...   \n",
-       "33959  zz1xkuwGqxdpH-JJZUYp4g   \n",
-       "33960  zz4qBQ-W2AE2g0-ePD0v-Q   \n",
-       "33961  zz71QiP13ESB37uuzspRMA   \n",
-       "33962  zzGRHRDrx8H7LXFd5QFJ_w   \n",
-       "33963  zzmVpziv5OsjmtshptyA9Q   \n",
-       "\n",
-       "                                              product_id  \n",
-       "0                                 43rd1LKcZRIunySzbMsyLQ  \n",
-       "1                                 JDNZxz0ud7zhuPo5pqznMA  \n",
-       "2                                 pbEiXam9YJL3neCYHGwLUA  \n",
-       "3                                 1QKqtC4vML3QhkrSzwR_tQ  \n",
-       "4                                 4wreIFjaPMppyEnzKHbozg  \n",
-       "...                                                  ...  \n",
-       "33959                             ms5ge1XY9-Alu7HkybAMdQ  \n",
-       "33960  sfWMOqUEp8S2adDeJp7Kzg,vvhfPV-Llkd4fE2SHuLVvA,...  \n",
-       "33961      eHtnZ0ISo63_0zr9rFotjw,mCHto10PBQOKnefm7gholg  \n",
-       "33962      XgGUnYs2bjbbNvBefFtWxA,oCTlReyKjJxKPFYfCurxxQ  \n",
-       "33963                             ALwH81_sqskLmwfWS-_eeQ  \n",
+       "                  reviewer_id                    Label\n",
+       "0      --1-HgcfL1vWbG-1hgn1oA                        Y\n",
+       "1      --AGQM8GPHljgKdnLisXgQ                        Y\n",
+       "2      --KQJPdrU0Md97DiOliDzw                        N\n",
+       "3      --KXo_HCYq9hB8NOdEUMKw                        N\n",
+       "4      --Qh8yKWAvIP4V4K8ZPfHA                        N\n",
+       "...                       ...                      ...\n",
+       "33959  zz1xkuwGqxdpH-JJZUYp4g                        N\n",
+       "33960  zz4qBQ-W2AE2g0-ePD0v-Q  N,N,N,N,N,N,N,N,N,N,N,N\n",
+       "33961  zz71QiP13ESB37uuzspRMA                      N,N\n",
+       "33962  zzGRHRDrx8H7LXFd5QFJ_w                      N,N\n",
+       "33963  zzmVpziv5OsjmtshptyA9Q                        N\n",
        "\n",
        "[33964 rows x 2 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1423,9 +1474,33 @@
    "source": [
     "Yelp_Chi_res = pd.read_csv('output_meta_yelpResData_NRYRcleaned.txt',delimiter= '\\s+', index_col=False)\n",
     "Yelp_Chi_res.columns = [\"date\", \"review_id\", \"reviewer_id\", \"product_id\",\"Label\",\"?\",\"?\",\"?\",\"star_rating\"]\n",
-    "Yelp_Chi_res = Yelp_Chi_res[[\"reviewer_id\",\"product_id\"]]\n",
+    "Yelp_Chi_res = Yelp_Chi_res[[\"reviewer_id\",\"Label\"]]\n",
     "Yelp_Chi_res1 = Yelp_Chi_res.astype(str).groupby(\"reviewer_id\").agg(','.join).reset_index()\n",
     "Yelp_Chi_res1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6857"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "benign = 0\n",
+    "for i in range(33964):\n",
+    "    if Yelp_Chi_res1.iat[i,1][0] == 'Y':\n",
+    "        benign += 1\n",
+    "benign"
    ]
   },
   {
@@ -1433,7 +1508,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#https://stackoverflow.com/questions/16729574/how-to-get-a-value-from-a-cell-of-a-dataframe"
+   ]
   }
  ],
  "metadata": {
